# equator-lang

./: Cargo.toml  README.md  pyproject.toml
docs/: README.md
docs/Design/: README.md  Types.md
docs/Design/Syntax/: Control.md  Data.md  Examples.md  Operators.md  README.md  Structures.md
equator/tokenizer/: __init__.py  token.py  tokenizer.py
src/: main.rs
